--- a/ecotech2/src/main/resources/templates/CadastrarCliente.html
+++ b/ecotech2/src/main/resources/templates/CadastrarCliente.html
@@ -6,13 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/style.css">
     <script src="https://kit.fontawesome.com/a11b8c2525.js" crossorigin="anonymous"></script>
-    <script src="/javascript.js"></script>
+    <script src="/secotech/javascript.js"></script>
     <link rel="shortcut icon" href="/img/icone.ico">
     <title>Cadastrar</title>
-
-    
-
-
 </head>
 <body>
     <header>
@@ -22,7 +18,7 @@
     <main>
         <br/><br/><br/><br/>
       <div class="regis_box">
-        <form onsubmit=" validarSenha()" th:object="${cliente}">
+        <form th:action="@{/ecotech/cliente/add-cliente}" th:object="${cliente}" method="post">
             <h1>Cadastrar-se</h1>
             <input type="text" th:field="*{nome}" required placeholder="Nome*" class="bordasSuaves">
             <input type="text" th:field="*{sobrenome}" required placeholder="Sobrenome*" class="bordasSuaves"><br/>
@@ -34,7 +30,7 @@
             <input type="email" th:field="*{email}" required placeholder="Email*" class="bordasSuaves"><br/>
 
             <input type="password" th:field="*{senha}" required placeholder="digite sua senha*" class="bordasSuaves" id="senha1">
-            <input type="password"  required placeholder="repita sua senha*" class="bordasSuaves" id="senha2"><br/><br/>
+            <input type="password" required placeholder="repita sua senha*" class="bordasSuaves" id="senha2"><br/><br/>
 
             <input type="submit" class="buttonColored" value="Cadastrar"><br/><br/>
         </form>
@@ -62,7 +58,7 @@
 
             <div class="regis_icon">
                 <i class="fa-regular fa-file"></i>
-                <p>Identificar seu perfil</p>
+                <p>Acelerar o preenchimento  de suas informações</p>
             </div>
       </div>
 
@@ -73,56 +69,7 @@
 
     </main>
     <footer>
-        <div class="footer-content">
-            <div class="footer-section">
-                <h3>Produtos</h3>
-                <ul>
-                    <li><a href="#">Smartphones</a></li>
-                    <li><a href="#">Notebooks</a></li>
-                    <li><a href="#">Smartwatches e Buds</a></li>
-                    <li><a href="#">Tablets</a></li>
-                    <li><a href="#">Acessórios</a></li>
-                    <li><a href="#">TV e AV</a></li>
-                    <li><a href="#">Eletrodomésticos</a></li>
-                    <li><a href="#">Monitores</a></li>
-                    <li><a href="#">Ar-condicionados</a></li>
-                </ul>
-            </div>
-            <div class="footer-section">
-                <h3>Suporte</h3>
-                <ul>
-                    <li><a href="#">FAQ</a></li>
-                    <li><a href="#">Fale Conosco</a></li>
-                </ul>
-            </div>
-            <div class="footer-section">
-                <h3>Redes Sociais</h3>
-                <ul class="social-icons">
-                    <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                    <li><a href="#"><i class="fab fa-instagram"></i></a></li>
-                    <li><a href="#"><i class="fab fa-facebook"></i></a></li>
-                </ul>
-            </div>
-            <div class="footer-section">
-                <h3>Formas de Pagamento</h3>
-                <ul class="payment-icons">
-                    <img src="../static/img/mastercard.png" alt="Visa">
-                    <img src="../static/img/visa.png" alt="MasterCard">
-                    <img src="../static/img/pix.png" alt="MasterCard">
-                </ul>
-            </div>
-        </div>
-        <hr>
-        <div class="footer-bottom">
-            <div class="footer-left">
-                <p style="font-size: larger;">Brasil</p>
-            </div>
-            <div class="footer-links">
-                <a href="#">Política de Privacidade</a>
-                <a href="#">Termos de Uso</a>
-            </div>               
-        </div>
-        </div>
+        
     </footer>
 </body>
 </html>
