--- a/ecotech2/src/main/resources/templates/index.html
+++ b/ecotech2/src/main/resources/templates/index.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../static/style.css">
+    <link rel="stylesheet" href="/style.css">
     <script src="https://kit.fontawesome.com/a11b8c2525.js" crossorigin="anonymous"></script>
-    <script src="../static/javascript.js"></script>
-    <link rel="shortcut icon" href="../static/img/icone.ico">
+    <script src="/javascript.js"></script>
+    <link rel="shortcut icon" href="/img/icone.ico">
     <title>Perfilr</title>
 </head>
 <body onload="plusSlides(0)">
     <header>
         <div class="header_green"> <a href="#">Seja bem vindo de volta <i>nome usuário</i></a> </div>
         <div class="header_black">
-            <img src="../static/img/echoTech2.png" id="logo">
+            <img src="/img/echoTech2.png" id="logo">
             <form>
                 <input type="search" id="pesquisa" placeholder="Pesquise aqui">
                 <input type="submit" id="btnPesquisa" value="pesquisar">
@@ -53,19 +53,19 @@
                 <!-- Full-width images with number and caption text -->
                 <div class="mySlides fade">
                 <div class="numbertext">1 / 3</div>
-                <img src="../static/img/img1.jpg" >
+                <img src="/img/img1.jpg" >
                 
                 </div>
             
                 <div class="mySlides fade">
                 <div class="numbertext">2 / 3</div>
-                <img src="../static/img/img2.jpg">
+                <img src="/img/img2.jpg">
                 
                 </div>
             
                 <div class="mySlides fade">
                 <div class="numbertext">3 / 3</div>
-                <img src="../static/img/img3.jpg">
+                <img src="/img/img3.jpg">
                
                 </div>
             
@@ -86,23 +86,14 @@
             <div class="inicio_fileira">
 
                 <div class="inicio_itenContent">
-                    <img src="../static/img/img1.jpg" alt="">
+                    <img src="/img/img1.jpg" alt="">
                     <h3>Nome produto</h3>
                     <p>R$00.00</p>
                     <br>
                     <a href="" class="comprar">Comprar Agora!</a>
                 </div>
                 <div class="inicio_itenContent">
-                    <img src="../static/img/img1.jpg" alt="">
-                    <h3>Nome produto</h3>
-                    <p>R$00.00</p>
-                    <br>
-                    <a href="" class="comprar">Comprar Agora!</a>
-                  
-                    <br>
-                </div>
-                <div class="inicio_itenContent">
-                    <img src="../static/img/img1.jpg" alt="">
+                    <img src="/img/img1.jpg" alt="">
                     <h3>Nome produto</h3>
                     <p>R$00.00</p>
                     <br>
@@ -111,7 +102,16 @@
                     <br>
                 </div>
                 <div class="inicio_itenContent">
-                    <img src="../static/img/img1.jpg" alt="">
+                    <img src="/img/img1.jpg" alt="">
+                    <h3>Nome produto</h3>
+                    <p>R$00.00</p>
+                    <br>
+                    <a href="" class="comprar">Comprar Agora!</a>
+                  
+                    <br>
+                </div>
+                <div class="inicio_itenContent">
+                    <img src="/img/img1.jpg" alt="">
                     <h3>Nome produto</h3>
                     <p>R$00.00</p>
                     <br>
@@ -127,23 +127,14 @@
             <div class="inicio_fileira">
 
                 <div class="inicio_itenContent">
-                    <img src="../static/img/img1.jpg" alt="">
+                    <img src="/img/img1.jpg" alt="">
                     <h3>Nome produto</h3>
                     <p>R$00.00</p>
                     <br>
                     <a href="" class="comprar">Comprar Agora!</a>
                 </div>
                 <div class="inicio_itenContent">
-                    <img src="../static/img/img1.jpg" alt="">
-                    <h3>Nome produto</h3>
-                    <p>R$00.00</p>
-                    <br>
-                    <a href="" class="comprar">Comprar Agora!</a>
-                  
-                    <br>
-                </div>
-                <div class="inicio_itenContent">
-                    <img src="../static/img/img1.jpg" alt="">
+                    <img src="/img/img1.jpg" alt="">
                     <h3>Nome produto</h3>
                     <p>R$00.00</p>
                     <br>
@@ -152,7 +143,16 @@
                     <br>
                 </div>
                 <div class="inicio_itenContent">
-                    <img src="../static/img/img1.jpg" alt="">
+                    <img src="/img/img1.jpg" alt="">
+                    <h3>Nome produto</h3>
+                    <p>R$00.00</p>
+                    <br>
+                    <a href="" class="comprar">Comprar Agora!</a>
+                  
+                    <br>
+                </div>
+                <div class="inicio_itenContent">
+                    <img src="/img/img1.jpg" alt="">
                     <h3>Nome produto</h3>
                     <p>R$00.00</p>
                     <br>
@@ -168,23 +168,14 @@
             <div class="inicio_fileira">
 
                 <div class="inicio_itenContent">
-                    <img src="../static/img/img1.jpg" alt="">
+                    <img src="/img/img1.jpg" alt="">
                     <h3>Nome produto</h3>
                     <p>R$00.00</p>
                     <br>
                     <a href="" class="comprar">Comprar Agora!</a>
                 </div>
                 <div class="inicio_itenContent">
-                    <img src="../static/img/img1.jpg" alt="">
-                    <h3>Nome produto</h3>
-                    <p>R$00.00</p>
-                    <br>
-                    <a href="" class="comprar">Comprar Agora!</a>
-                  
-                    <br>
-                </div>
-                <div class="inicio_itenContent">
-                    <img src="../static/img/img1.jpg" alt="">
+                    <img src="/img/img1.jpg" alt="">
                     <h3>Nome produto</h3>
                     <p>R$00.00</p>
                     <br>
@@ -193,7 +184,16 @@
                     <br>
                 </div>
                 <div class="inicio_itenContent">
-                    <img src="../static/img/img1.jpg" alt="">
+                    <img src="/img/img1.jpg" alt="">
+                    <h3>Nome produto</h3>
+                    <p>R$00.00</p>
+                    <br>
+                    <a href="" class="comprar">Comprar Agora!</a>
+                  
+                    <br>
+                </div>
+                <div class="inicio_itenContent">
+                    <img src="/img/img1.jpg" alt="">
                     <h3>Nome produto</h3>
                     <p>R$00.00</p>
                     <br>
